lang/src/parse.rs
use std::fmt::{self, Display, Formatter};

use crate::Token;

#[derive(Debug)]
pub enum EnumSpecifier<'text> {
    NamedEnum(&'text str, EnumeratorList<'text>),
    AnonymousEnum(EnumeratorList<'text>),
    EnumDeclarator(&'text str),
}

fn parse_enum_specifier<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(EnumSpecifier<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("enum")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    fn parse_enum_body<'text>(
        tokens: &[Token<'text>],
        pos: usize,
    ) -> Result<(EnumeratorList<'text>, usize), ParseError> {
        let Some(Token::LCurly) = tokens.get(pos) else {
            return Err(ParseError::ExpectedLCurly(pos));
        };

        let (list, pos) = parse_enumerator_list(tokens, pos + 1)?;

        let Some(Token::RCurly) = tokens.get(pos) else {
            return Err(ParseError::ExpectedRCurly(pos).into());
        };

        return Ok((list, pos + 1));
    }

    if let Some(Token::Ident(ident)) = tokens.get(pos + 1) {
        if let Some(Token::LCurly) = tokens.get(pos + 2) {
            let (list, pos) = parse_enum_body(tokens, pos + 2)?;
            return Ok((EnumSpecifier::NamedEnum(ident, list), pos));
        }

        return Ok((EnumSpecifier::EnumDeclarator(ident), pos + 2));
    }

    let (list, pos) = parse_enum_body(tokens, pos + 1)?;
    Ok((EnumSpecifier::AnonymousEnum(list), pos))
}

#[derive(Debug)]
pub struct EnumeratorList<'text>(pub Vec<Enumerator<'text>>);

fn parse_enumerator_list<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(EnumeratorList<'text>, usize), ParseError> {
    let (invariant, mut pos) = parse_enumerator(tokens, pos)?;
    let mut invariants = vec![invariant];

    while let Some(Token::Comma) = tokens.get(pos) {
        pos += 1;

        let (invariant, next_pos) = parse_enumerator(tokens, pos)?;
        pos = next_pos;

        invariants.push(invariant);
    }

    Ok((EnumeratorList(invariants), pos))
}

#[derive(Debug)]
pub enum Enumerator<'text> {
    Implicit(&'text str),
    Explicit(&'text str, ConstantExpr<'text>),
}

fn parse_enumerator<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(Enumerator<'text>, usize), ParseError> {
    let Some(Token::Ident(ident)) = tokens.get(pos) else {
        return Err(ParseError::ExpectedIdentifier(pos));
    };

    let Some(Token::Equals) = tokens.get(pos + 1) else {
        return Ok((Enumerator::Implicit(ident), pos + 1));
    };

    let (expr, pos) = parse_constant_expr(tokens, pos + 2)?;

    Ok((Enumerator::Explicit(ident, expr), pos))
}

pub enum DeclarationSpecifier<'text> {
    StorageClassSpecifier(StorageClassSpecifier),
    TypeSpecifier(TypeSpecifier<'text>),
    TypeQualifier(TypeQualifier),
}

fn parse_declaration_specifier<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(DeclarationSpecifier<'text>, usize), ParserCombinatorError> {
    combine_parsers(
        tokens,
        pos,
        &[
            Box::new(parse_storage_class_specifier),
            Box::new(parse_type_specifier),
            Box::new(parse_type_qualifier),
        ],
    )
}

#[derive(Debug)]
pub enum StorageClassSpecifier {
    Auto,
    Register,
    Static,
    Extern,
    TypeDef,
}

fn parse_storage_class_specifier<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(StorageClassSpecifier, usize), ParserCombinatorError> {
    match tokens.get(pos) {
        Some(Token::Keyword("auto")) => Ok((StorageClassSpecifier::Auto, pos + 1)),
        Some(Token::Keyword("register")) => Ok((StorageClassSpecifier::Register, pos + 1)),
        Some(Token::Keyword("static")) => Ok((StorageClassSpecifier::Static, pos + 1)),
        Some(Token::Keyword("extern")) => Ok((StorageClassSpecifier::Extern, pos + 1)),
        Some(Token::Keyword("typedef")) => Ok((StorageClassSpecifier::TypeDef, pos + 1)),
        _ => Err(ParserCombinatorError::IncorrectParser),
    }
}

pub enum SpecifierQualifier<'text> {
    TypeSpecifier(TypeSpecifier<'text>),
    TypeQualifier(TypeQualifier),
}

fn parse_specifier_qualifier<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(SpecifierQualifier<'text>, usize), ParserCombinatorError> {
    combine_parsers(
        tokens,
        pos,
        &[
            Box::new(parse_type_specifier),
            Box::new(parse_type_qualifier),
        ],
    )
}

#[derive(Debug)]
pub enum TypeSpecifier<'text> {
    Void,
    Char,
    Short,
    Int,
    Long,
    Float,
    Double,
    Signed,
    UnSigned,
    EnumSpecifier(EnumSpecifier<'text>),
    TypeDefName(&'text str),
}

fn parse_type_specifier<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(TypeSpecifier<'text>, usize), ParserCombinatorError> {
    fn parse_basic_type_specifier<'text>(
        tokens: &[Token<'text>],
        pos: usize,
    ) -> Result<(TypeSpecifier<'text>, usize), ParserCombinatorError> {
        match tokens.get(pos) {
            Some(Token::Keyword("void")) => Ok((TypeSpecifier::Void, pos + 1)),
            Some(Token::Keyword("char")) => Ok((TypeSpecifier::Char, pos + 1)),
            Some(Token::Keyword("short")) => Ok((TypeSpecifier::Short, pos + 1)),
            Some(Token::Keyword("int")) => Ok((TypeSpecifier::Int, pos + 1)),
            Some(Token::Keyword("long")) => Ok((TypeSpecifier::Long, pos + 1)),
            Some(Token::Keyword("float")) => Ok((TypeSpecifier::Float, pos + 1)),
            Some(Token::Keyword("double")) => Ok((TypeSpecifier::Double, pos + 1)),
            Some(Token::Keyword("signed")) => Ok((TypeSpecifier::Signed, pos + 1)),
            Some(Token::Keyword("unsigned")) => Ok((TypeSpecifier::UnSigned, pos + 1)),
            _ => Err(ParserCombinatorError::IncorrectParser),
        }
    }

    fn parse_typedef_name<'text>(
        tokens: &[Token<'text>],
        pos: usize,
    ) -> Result<(TypeSpecifier<'text>, usize), ParserCombinatorError> {
        match tokens.get(pos) {
            Some(Token::Ident(ident)) => Ok((TypeSpecifier::TypeDefName(ident), pos + 1)),
            _ => Err(ParserCombinatorError::IncorrectParser),
        }
    }

    combine_parsers(
        tokens,
        pos,
        &[
            Box::new(parse_basic_type_specifier),
            Box::new(parse_enum_specifier),
            Box::new(parse_typedef_name),
        ],
    )
}

#[derive(Debug)]
pub struct Pointer {
    pub qualifiers: Vec<TypeQualifier>,
    pub next: Option<Box<Pointer>>,
}

fn parse_pointer<'text>(
    tokens: &[Token<'text>],
    mut pos: usize,
) -> Result<(Pointer, usize), ParserCombinatorError> {
    let Some(Token::Asterisk) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };
    pos += 1;

    let mut pointer = Pointer {
        qualifiers: vec![],
        next: None,
    };

    loop {
        match parse_type_qualifier(tokens, pos) {
            Err(ParserCombinatorError::IncorrectParser) => break,
            Err(e) => return Err(e),
            Ok((qualifier, next_pos)) => {
                pointer.qualifiers.push(qualifier);
                pos = next_pos;
            }
        }
    }

    match parse_pointer(tokens, pos) {
        Err(ParserCombinatorError::IncorrectParser) => Ok((pointer, pos)),
        Err(e) => Err(e),
        Ok((next_pointer, next_pos)) => {
            pos = next_pos;
            pointer.next = Some(Box::new(next_pointer));
            Ok((pointer, pos))
        }
    }
}

#[derive(Debug)]
pub enum TypeQualifier {
    Const,
    Volatile,
}

fn parse_type_qualifier<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(TypeQualifier, usize), ParserCombinatorError> {
    match tokens.get(pos) {
        Some(Token::Keyword("const")) => Ok((TypeQualifier::Const, pos + 1)),
        Some(Token::Keyword("volatile")) => Ok((TypeQualifier::Volatile, pos + 1)),
        _ => Err(ParserCombinatorError::IncorrectParser),
    }
}

#[derive(Debug)]
pub enum Initializer<'text> {
    Assignment(AssignmentExpr<'text>),
    InitializerList(Vec<AssignmentExpr<'text>>),
}

fn parse_initializer<'text>(
    tokens: &[Token<'text>],
    mut pos: usize,
) -> Result<(Initializer<'text>, usize), ParseError> {
    if let Some(Token::LCurly) = tokens.get(pos) {
        let mut initializers = Vec::new();
        pos += 1;

        while let Some(token) = tokens.get(pos) {
            if token == &Token::RCurly {
                pos += 1;
                break;
            }

            let (initializer, next_pos) = parse_assignment_expr(tokens, pos)?;
            pos = next_pos;

            initializers.push(initializer);

            match tokens.get(pos) {
                Some(Token::Comma) => pos += 1,
                Some(Token::RCurly) => {
                    pos += 1;
                    break;
                }
                _ => return Err(ParseError::ExpectedRCurly(pos)),
            }
        }

        return Ok((Initializer::InitializerList(initializers), pos));
    }

    let (expr, pos) = parse_assignment_expr(tokens, pos)?;
    Ok((Initializer::Assignment(expr), pos))
}

#[derive(Debug)]
pub enum Stmt<'text> {
    Labeled(LabeledStmt<'text>),
    EmptyStmt,
    Expr(Expr<'text>),
    Compound(CompoundStmt<'text>),
    Selection(SelectionStmt<'text>),
    Iteration(IterationStmt<'text>),
    Jump(JumpStmt<'text>),
}

fn parse_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(Stmt<'text>, usize), ParserCombinatorError> {
    combine_parsers(
        tokens,
        pos,
        &[
            Box::new(parse_labeled_ident_stmt),
            Box::new(parse_empty_stmt),
            Box::new(parse_expr_stmt),
            Box::new(parse_compound_stmt),
            Box::new(parse_selection_stmt),
            Box::new(parse_iteration_while_stmt),
            Box::new(parse_iteration_do_while_stmt),
            Box::new(parse_iteration_for_stmt),
            Box::new(parse_jump_goto_stmt),
            Box::new(parse_jump_continue_stmt),
            Box::new(parse_jump_break_stmt),
            Box::new(parse_jump_return_stmt),
        ],
    )
}

#[derive(Debug)]
pub enum LabeledStmt<'text> {
    Ident(&'text str, Box<Stmt<'text>>),
}

fn parse_labeled_ident_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(LabeledStmt<'text>, usize), ParserCombinatorError> {
    if let Some(Token::Ident(ident)) = tokens.get(pos) {
        if let Some(Token::Colon) = tokens.get(pos + 1) {
            let (stmt, pos) = parse_stmt(tokens, pos + 2)?;
            return Ok((LabeledStmt::Ident(ident, Box::new(stmt)), pos));
        }
    }
    Err(ParserCombinatorError::IncorrectParser)
}

fn parse_empty_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(Stmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::SemiColon) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    Ok((Stmt::EmptyStmt, pos + 1))
}

fn parse_expr_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(Stmt<'text>, usize), ParserCombinatorError> {
    let Ok((expr, pos)) = parse_expr(tokens, pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::SemiColon) = tokens.get(pos) else {
        return Err(ParseError::ExpectedSemicolon(pos).into());
    };

    Ok((Stmt::Expr(expr), pos + 1))
}

#[derive(Debug)]
pub struct CompoundStmt<'text>(pub Vec<Stmt<'text>>);

fn parse_compound_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(CompoundStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::LCurly) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let mut stmts = Vec::new();
    let mut pos = pos + 1;

    while let Some(token) = tokens.get(pos) {
        if token == &Token::RCurly {
            return Ok((CompoundStmt(stmts), pos + 1));
        }

        match parse_stmt(tokens, pos) {
            Ok((stmt, next_pos)) => {
                pos = next_pos;
                stmts.push(stmt);
            }
            Err(e) => return Err(e.into()),
        };
    }

    Err(ParseError::ExpectedRCurly(pos).into())
}

#[derive(Debug)]
pub enum SelectionStmt<'text> {
    If {
        test: Expr<'text>,
        pass: Box<Stmt<'text>>,
    },
    IfElse {
        test: Expr<'text>,
        pass: Box<Stmt<'text>>,
        fail: Box<Stmt<'text>>,
    },
}

fn parse_selection_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(SelectionStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("if")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::LParen) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedLParen(pos + 1).into());
    };

    let (test, pos) = parse_expr(tokens, pos + 2)?;

    let Some(Token::RParen) = tokens.get(pos) else {
        return Err(ParseError::ExpectedRParen(pos).into());
    };

    let (pass, pos) = parse_stmt(tokens, pos + 1)?;
    let pass = Box::new(pass);

    let Some(Token::Keyword("else")) = tokens.get(pos) else {
        return Ok((SelectionStmt::If { test, pass }, pos));
    };

    let (fail, pos) = parse_stmt(tokens, pos + 1)?;
    let fail = Box::new(fail);

    Ok((SelectionStmt::IfElse { test, pass, fail }, pos))
}

#[derive(Debug)]
pub enum IterationStmt<'text> {
    While {
        test: Expr<'text>,
        body: Box<Stmt<'text>>,
    },
    DoWhile {
        test: Expr<'text>,
        body: Box<Stmt<'text>>,
    },
    For {
        init: Option<Expr<'text>>,
        test: Option<Expr<'text>>,
        update: Option<Expr<'text>>,
        body: Box<Stmt<'text>>,
    },
}

fn parse_iteration_while_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(IterationStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("while")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::LParen) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedLParen(pos + 1).into());
    };

    let (test, pos) = parse_expr(tokens, pos + 2)?;

    let Some(Token::RParen) = tokens.get(pos) else {
        return Err(ParseError::ExpectedRParen(pos).into());
    };

    let (body, pos) = parse_stmt(tokens, pos + 1)?;
    let body = Box::new(body);

    Ok((IterationStmt::While { test, body }, pos))
}

fn parse_iteration_do_while_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(IterationStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("do")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let (body, pos) = parse_stmt(tokens, pos + 1)?;
    let body = Box::new(body);

    let Some(Token::Keyword("while")) = tokens.get(pos) else {
        return Err(ParseError::ExpectedKeyword("while", pos).into());
    };

    let Some(Token::LParen) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedLParen(pos + 1).into());
    };

    let (test, pos) = parse_expr(tokens, pos + 2)?;

    let Some(Token::RParen) = tokens.get(pos) else {
        return Err(ParseError::ExpectedRParen(pos).into());
    };

    let Some(Token::SemiColon) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedSemicolon(pos + 1).into());
    };

    Ok((IterationStmt::DoWhile { test, body }, pos + 2))
}

fn parse_iteration_for_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(IterationStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("for")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::LParen) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedLParen(pos + 1).into());
    };

    let (init, pos) = match tokens.get(pos + 2) {
        Some(Token::SemiColon) => (None, pos + 2),
        _ => {
            let (expr, pos) = parse_expr(tokens, pos + 2)?;
            (Some(expr), pos)
        }
    };

    let Some(Token::SemiColon) = tokens.get(pos) else {
        return Err(ParseError::ExpectedSemicolon(pos).into());
    };

    let (test, pos) = match tokens.get(pos + 1) {
        Some(Token::SemiColon) => (None, pos + 1),
        _ => {
            let (expr, pos) = parse_expr(tokens, pos + 1)?;
            (Some(expr), pos)
        }
    };

    let Some(Token::SemiColon) = tokens.get(pos) else {
        return Err(ParseError::ExpectedSemicolon(pos).into());
    };

    let (update, pos) = match tokens.get(pos + 1) {
        Some(Token::RParen) => (None, pos + 1),
        _ => {
            let (expr, pos) = parse_expr(tokens, pos + 1)?;
            (Some(expr), pos)
        }
    };

    let Some(Token::RParen) = tokens.get(pos) else {
        return Err(ParseError::ExpectedRParen(pos).into());
    };

    let (body, pos) = parse_stmt(tokens, pos + 1)?;
    let body = Box::new(body);

    Ok((
        IterationStmt::For {
            init,
            test,
            update,
            body,
        },
        pos,
    ))
}

#[derive(Debug)]
pub enum JumpStmt<'text> {
    Goto(&'text str),
    Continue,
    Break,
    Return(Option<Expr<'text>>),
}

fn parse_jump_goto_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(JumpStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("goto")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::Ident(ident)) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedIdentifier(pos + 1).into());
    };

    let Some(Token::SemiColon) = tokens.get(pos + 2) else {
        return Err(ParseError::ExpectedSemicolon(pos + 2).into());
    };

    Ok((JumpStmt::Goto(ident), pos + 3))
}

fn parse_jump_continue_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(JumpStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("continue")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::SemiColon) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedSemicolon(pos + 1).into());
    };

    Ok((JumpStmt::Continue, pos + 2))
}

fn parse_jump_break_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(JumpStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("break")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let Some(Token::SemiColon) = tokens.get(pos + 1) else {
        return Err(ParseError::ExpectedSemicolon(pos + 1).into());
    };

    Ok((JumpStmt::Break, pos + 2))
}

fn parse_jump_return_stmt<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(JumpStmt<'text>, usize), ParserCombinatorError> {
    let Some(Token::Keyword("return")) = tokens.get(pos) else {
        return Err(ParserCombinatorError::IncorrectParser);
    };

    let (expr, pos) = match tokens.get(pos + 1) {
        Some(Token::SemiColon) => (None, pos + 1),
        _ => {
            let (expr, pos) = parse_expr(tokens, pos + 1)?;
            (Some(expr), pos)
        }
    };

    let Some(Token::SemiColon) = tokens.get(pos) else {
        return Err(ParseError::ExpectedSemicolon(pos).into());
    };

    return Ok((JumpStmt::Return(expr), pos + 1));
}

trait Parser<'text, Ast> {
    fn parse(
        &self,
        tokens: &[Token<'text>],
        pos: usize,
    ) -> Result<(Ast, usize), ParserCombinatorError>;
}

fn combine_parsers<'text, Ast>(
    tokens: &[Token<'text>],
    pos: usize,
    parsers: &[Box<dyn Parser<'text, Ast>>],
) -> Result<(Ast, usize), ParserCombinatorError> {
    for parser in parsers {
        match parser.parse(tokens, pos) {
            Err(ParserCombinatorError::IncorrectParser) => continue,
            Err(e) => return Err(e),
            Ok((ast, pos)) => return Ok((ast, pos)),
        };
    }

    Err(ParserCombinatorError::IncorrectParser)
}

impl<'text, ParsedValue, F, Ast> Parser<'text, Ast> for F
where
    ParsedValue: Into<Ast>,
    F: Fn(&[Token<'text>], usize) -> Result<(ParsedValue, usize), ParserCombinatorError>,
{
    fn parse(
        &self,
        tokens: &[Token<'text>],
        pos: usize,
    ) -> Result<(Ast, usize), ParserCombinatorError> {
        match self(tokens, pos) {
            Ok((val, pos)) => Ok((val.into(), pos)),
            Err(e) => Err(e),
        }
    }
}

#[derive(Debug)]
enum ParserCombinatorError {
    ParseError(ParseError),
    IncorrectParser,
}

pub type Expr<'text> = AssignmentExpr<'text>;

fn parse_expr<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(Expr<'text>, usize), ParseError> {
    parse_assignment_expr(tokens, pos)
}

#[derive(Debug, PartialEq)]
pub enum AssignmentExpr<'text> {
    ConditionalExpr(ConditionalExpr<'text>),
    Assign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    MulAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    DivAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    ModAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    AddAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    SubAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    ShiftLeftAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    ShiftRightAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    BitAndAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    XORAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
    BitOrAssign(UnaryExpr<'text>, Box<AssignmentExpr<'text>>),
}

fn parse_assignment_expr<'text>(
    tokens: &[Token<'text>],
    pos: usize,
) -> Result<(AssignmentExpr<'text>, usize), ParseError> {
    if let Ok((unary, pos)) = parse_unary_expr(tokens, pos) {
        if let Some(op) = tokens.get(pos) {
            if op == &Token::Equals {
                let (rhs, pos) = parse_assignment_expr(tokens, pos + 1)?;
                return Ok((AssignmentExpr::Assign(unary, Box::new(rhs)), pos));
            }

            if op == &Token::AsteriskEquals {
                let (rhs, pos) = parse_assignment_expr(tokens, pos + 1)?;
                return Ok((AssignmentExpr::MulAssign(unary, Box::new(rhs)), pos));
            }
